--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,17 +21,17 @@ spring:
         format_sql: true
         use_sql_comments: true
         show-sql: true
-        jdbc:
-          batch_size: 50  # 한 번에 50개씩 배치 처리
-          order_inserts: true  # insert 문을 최적화된 순서로 실행
-          order_updates: true  # update 문을 최적화된 순서로 실행
-          generate_statistics: true  # 통계 출력 (선택 사항)
-          show-sql: true  # SQL 출력
-          datasource:
-            url: jdbc:mysql://localhost:3306/moviemates?rewriteBatchedStatements=true  # rewriteBatchedStatements 추가
-            driver-class-name: com.mysql.cj.jdbc.Driver  # MySQL JDBC 드라이버
-            username: root
-            password: 1234
+#        jdbc:
+#          batch_size: 50  # 한 번에 50개씩 배치 처리
+#          order_inserts: true  # insert 문을 최적화된 순서로 실행
+#          order_updates: true  # update 문을 최적화된 순서로 실행
+#          generate_statistics: true  # 통계 출력 (선택 사항)
+#          show-sql: true  # SQL 출력
+#          datasource:
+#            url: jdbc:mysql://localhost:3306/moviemates?rewriteBatchedStatements=true  # rewriteBatchedStatements 추가
+#            driver-class-name: com.mysql.cj.jdbc.Driver  # MySQL JDBC 드라이버
+#            username: root
+#            password: 1234
     timezone: UTC
   mysql:
     init-mode: always
