--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,11 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+
+    // Querydsl 프로세서 (코드 생성)
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jpa"
+
+
 //	//Swagger
 //	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     implementation 'org.jsoup:jsoup:1.15.4'
