--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,12 @@ ext {
 }
 
 dependencies {
+
+
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 
@@ -36,7 +42,9 @@ dependencies {
 //	testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.jsoup:jsoup:1.17.2'
-    implementation 'mysql:mysql-connector-java:8.0.32'
+   // implementation 'mysql:mysql-connector-java:8.0.32'
+    implementation 'mysql:mysql-connector-java'
+
 
     // QueryDsl
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
@@ -51,19 +59,26 @@ dependencies {
 
 //	//Swagger
 //	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-    implementation 'org.jsoup:jsoup:1.15.4'
 
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
     implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '3.3.2'
 
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
-    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.14.1'
+    //implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.14.1'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.19.1'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.19.1'
+    implementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.19.1'
+    implementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
 
     // thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
-    implementation 'org.jsoup:jsoup:1.15.3'
+
+
+    //implementation 'org.jsoup:jsoup:1.15.3'
+    implementation 'org.jsoup:jsoup:1.14.3'
+
     implementation 'mysql:mysql-connector-java:8.0.33'
 
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
