240923 1939 병합 후, 에러 정리 후, 템플릿 내꺼 적용하고 어드민 반영

--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,8 @@ dependencies {
     //oauth2
    // implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.300'
+
 }
 
 dependencyManagement {
