240924 2106 로그인을 통해 관리자페이지로 넘어가는 기능 구현

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
       static-locations: classpath:/static/
   thymeleaf:
     prefix: classpath:/templates/
-    suffix: .html;
+    suffix: .html
     cache: false
   datasource:
     url: jdbc:mysql://localhost:3306/moviemates
