240930 2026 유저관리페이지 생성 중

--- a/build.gradle
+++ b/build.gradle
@@ -90,7 +90,12 @@ dependencies {
 
     //oauth2
    // implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.522'
+
+    //aws 버킷에 올리려는 설정
+//    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
 }
 
