--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
   //  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 
     compileOnly("org.springframework.boot:spring-boot-devtools")
     implementation 'org.springframework.boot:spring-boot-starter-web'
