--- a/build.gradle
+++ b/build.gradle
@@ -99,11 +99,11 @@ dependencies {
    // implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.522'
+//    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.522'
 
     //aws 버킷에 올리려는 설정
-//    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
-
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 dependencyManagement {
