--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
     //ncloud
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.300'
+
     // QueryDsl
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
@@ -62,10 +63,6 @@ dependencies {
 
     // Querydsl 프로세서 (코드 생성)
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jpa"
-
-
-//	//Swagger
-//	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
     implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '3.3.2'
@@ -80,8 +77,6 @@ dependencies {
     // thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-    //implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
-
 
     //implementation 'org.jsoup:jsoup:1.15.3'
     implementation 'org.jsoup:jsoup:1.14.3'
@@ -90,10 +85,6 @@ dependencies {
 
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
     implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '3.3.3'
-
-    //thymeleaf
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 
     //oauth2
    // implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
@@ -104,6 +95,19 @@ dependencies {
     //aws 버킷에 올리려는 설정
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.4'
+
+    // https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity6
+    implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity6', version: '3.1.2.RELEASE'
+
+    //JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
 }
 
 dependencyManagement {
