241029 1620 "결제 및 회원가입 수정"

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -38,6 +38,10 @@ spring:
       init-mode: always
   server:
     port: 8080
+    servlet:
+      session:
+        persistent: false
+
 #naver:
 #  storage:
 #    accessKey: 32C6E2545595B9B2A738
