--- a/build.gradle
+++ b/build.gradle
@@ -89,7 +89,6 @@ dependencies {
 
 
 
-
 //    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.522'
 
     //aws 버킷에 올리려는 설정
@@ -107,6 +106,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 
 }
 
