--- a/build.gradle
+++ b/build.gradle
@@ -108,6 +108,10 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    //.env 파일
+    implementation 'io.github.cdimascio:dotenv-java:2.3.1'
+
+
 }
 
 dependencyManagement {
