20241115 2018 - 이미지 uuid 추가

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,7 +49,7 @@ services:
       - moviemates-network
 
 networks:
-  moviemate-network:
+  moviemates-network:
     driver: bridge
   default:
     external: true
